# fortran_calls_python

./: CMakeLists.txt  LICENSE  README.md
py/: my_model.py  wrf_hydro_tartes_model.py
src/: CMakeLists.txt  self_descr_array_mod.f90  tartes_albedo.f90.in
tests/: CMakeLists.txt  test_driver.f90.in  test_self_descr_array.f90  test_tartes.f90  test_tartes.f90.in
